<resources>
    <string name="google_api_key">AIzaSyDhC1Tha8FKORJfe7--SYluRWe_n1LVMoE</string>
    <string name="app_name">Places Search</string>
    <string name="keywordLabel">Keyword</string>
    <string name="categoryLabel">Category</string>
    <string name="distanceLabel">Distance (in miles)</string>
    <string name="locationLabel">From</string>
    <string name="currentLocBtn">Current location</string>
    <string name="otherLocBtn">Other. Specify Location</string>
    <string name="searchBtn">SEARCH</string>
    <string name="clearBtn">CLEAR</string>
    <string name="validationToast">Please fix all fields with errors</string>
    <string name="inputValidation">Please enter mandatory field</string>
    <string name="keywordHint">Enter keyword</string>
    <string name="distanceHint">Enter distance (default 10 miles)</string>
    <string name="otherLocHint">Type in the Location</string>
    <string name="fromLabel">From</string>
    <string name="fromHint">Type in the Location</string>
    <string name="modeLabel">Travel mode</string>
    <string-array name="categoryName">
        <item>Default</item>
        <item>Airport</item>
        <item>Amusement Park</item>
        <item>Aquarium</item>
        <item>Art Gallery</item>
        <item>Bakery</item>
        <item>Bar</item>
        <item>Beauty Salon</item>
        <item>Bowling Alley</item>
        <item>Bus Station</item>
        <item>Cafe</item>
        <item>Campground</item>
        <item>Car Rental</item>
        <item>Casino</item>
        <item>Lodging</item>
        <item>Movie Theater</item>
        <item>Museum</item>
        <item>Night Club</item>
        <item>Park</item>
        <item>Parking</item>
        <item>Restaurant</item>
        <item>Shopping Mall</item>
        <item>Stadium</item>
        <item>Subway Station</item>
        <item>Taxi Stand</item>
        <item>Train Station</item>
        <item>Transit Station</item>
        <item>Travel Agency</item>
        <item>Zoo</item>
    </string-array>
    <string-array name="categoryValue">
        <item>default</item>
        <item>airport</item>
        <item>amusement_park</item>
        <item>aquarium</item>
        <item>art_gallery</item>
        <item>bakery</item>
        <item>bar</item>
        <item>beauty_salon</item>
        <item>bowling_alley</item>
        <item>bus_station</item>
        <item>cafe</item>
        <item>campground</item>
        <item>car_rental</item>
        <item>casino</item>
        <item>lodging</item>
        <item>movie_theater</item>
        <item>museum</item>
        <item>night_club</item>
        <item>park</item>
        <item>parking</item>
        <item>restaurant</item>
        <item>shopping_mall</item>
        <item>stadium</item>
        <item>subway_station</item>
        <item>taxi_stand</item>
        <item>train_station</item>
        <item>transit_station</item>
        <item>travel_agency</item>
        <item>zoo</item>
    </string-array>
    <string-array name="searchTabContent">
        <item>&#160;SEARCH</item>
        <item>&#160;FAVORITES</item>
    </string-array>
    <string-array name="detailTabContent">
        <item>&#160;INFO</item>
        <item>&#160;PHOTOS</item>
        <item>&#160;MAP</item>
        <item>&#160;REVIEWS</item>
    </string-array>
    <string-array name="modeName">
        <item>Driving</item>
        <item>Bicycling</item>
        <item>Transit</item>
        <item>Walking</item>
    </string-array>
    <string-array name="modeValue">
        <item>driving</item>
        <item>bicycling</item>
        <item>transit</item>
        <item>walking</item>
    </string-array>
    <string-array name="reviewSource">
        <item>Google reviews</item>
        <item>Yelp reviews</item>
    </string-array>
    <string-array name="reviewOrder">
        <item>Default order</item>
        <item>Highest rating</item>
        <item>Lowest rating</item>
        <item>Most recent</item>
        <item>Least recent</item>
    </string-array>
    <string name="noReviews">No reviews</string>
    <string name="noFavorites">No favorites</string>


</resources>
