<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="15dp"
    tools:context=".searchTab">


    <TextView
        android:id="@+id/keywordLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/keywordLabel"
        tools:layout_editor_absoluteX="8dp"
        tools:layout_editor_absoluteY="28dp" />

    <TextView
        android:id="@+id/keywordValidation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/inputValidation"
        android:textColor="@color/colorValidation"
        android:visibility="gone" />

    <EditText
        android:id="@+id/keywordInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/keywordHint"
        android:inputType="text"
        tools:layout_editor_absoluteY="54dp" />

    <TextView
        android:id="@+id/categoryLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="@string/categoryLabel"
        tools:layout_editor_absoluteX="8dp"
        tools:layout_editor_absoluteY="140dp" />

    <Spinner
        android:id="@+id/categoryInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:layout_editor_absoluteY="168dp" />

    <TextView
        android:id="@+id/distanceLabel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="@string/distanceLabel" />

    <EditText
        android:id="@+id/distanceInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/distanceHint"
        android:inputType="number" />

    <TextView
        android:id="@+id/locationLabel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="@string/locationLabel" />

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <RadioButton
            android:id="@+id/currentLocBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/currentLocBtn" />

        <RadioButton
            android:id="@+id/otherLocBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/otherLocBtn" />

        <TextView
            android:id="@+id/otherLocValidation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/inputValidation"
            android:textColor="@color/colorValidation"
            android:visibility="gone" />

        <AutoCompleteTextView
            android:id="@+id/otherLocInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="28dp"
            android:layout_weight="1"
            android:hint="@string/otherLocHint"
            android:inputType="none|text|textAutoComplete" />

    </RadioGroup>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <Button
            android:id="@+id/searchBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/searchBtn" />

        <Button
            android:id="@+id/clearBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/clearBtn" />

    </LinearLayout>

    <EditText
        android:id="@+id/editText2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="Name" />


</LinearLayout>