<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="15dp"
    tools:context=".mapTab">


    <TextView
        android:id="@+id/fromLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/fromLabel"
        tools:layout_editor_absoluteX="8dp"
        tools:layout_editor_absoluteY="28dp" />

    <EditText
        android:id="@+id/fromInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/fromHint"
        android:inputType="text"
        tools:layout_editor_absoluteY="54dp" />

    <TextView
        android:id="@+id/modeLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="@string/modeLabel"
        tools:layout_editor_absoluteX="8dp"
        tools:layout_editor_absoluteY="140dp" />

    <Spinner
        android:id="@+id/modeInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:layout_editor_absoluteY="168dp" />
</LinearLayout>